--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,6 @@ local.properties
 # TeXlipse plugin
 .texlipse
 
-
 ### Java ###
 *.class
 
@@ -56,7 +55,6 @@ local.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-
 ### Maven ###
 target/
 pom.xml.tag
@@ -68,15 +66,12 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 
-
 ### Vault ###
 .vlt
-
 
 ### IntelliJ ###
 .idea/
 *.iml
-
 
 ### Node.js ###
 
@@ -101,3 +96,29 @@ reports/
 
 # Others
 dispatcher/src/conf.d/variables/default.vars
+
+### System Files ###
+
+# Windows system files
+Thumbs.db
+ehthumbs.db
+
+# Mac OS system files
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Linux system files
+*~
+
+# JetBrains IDEs
+.idea/
+
+# VS Code
+.vscode/
+
+# Temporary files
+*.swp
+*.swo
+*.bak
+*.orig
